--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: Learning to make a blog page
-description: This is where I learn how to make a page, also .yaml
+title: JR Goes to Proof Camp
+description: A chronicle of my proof-learning adventures
 author: JR Learnstomath
