--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: JR Goes to Proof Camp
-description: A chronicle of my proof-learning adventures
+title: Categories for a Working Homemaker
+description: A non-blog
 author: JR Learnstomath
